--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,53 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Alegreya&display=swap');
+:root {
+  --primary-white: #67808B;
+  --secondary-color : #1E2F37;
+  --selected-color : white;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body {
+  font-family: 'Alegreya', sans-serif;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.logo {
+  max-width: fit-content;
+  max-height: 3rem;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+/*-----------Menu navbar---------------*/
+
+nav a.nav-link {
+  font-weight: 500;
   color: white;
+  font-size: 16px;
+  letter-spacing: 0.6px;
+  cursor: pointer;
 }
 
-.App-link {
-  color: #61dafb;
+nav ul li {
+  text-transform: capitalize;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.navbar-nav>li>a {
+  color: var(--primary-white) !important;
+  margin-left: 0.75rem;
+  margin-right: 0.75rem;
+  font-size: 16px !important;
+  border-bottom: 0.1rem solid rgba(255, 255, 255, 0) ;
+}
+
+.navbar-brand {
+  max-width: 5rem ;
+  padding: 0 !important;
+  height: 3.5rem !important;
+ 
+}
+
+.navbar-nav > li > a.active ,.navbar-nav > li > a:focus {
+  border-bottom: 0.1rem solid ;
+  color: var(--selected-color) !important;
+}
+
+.navbar-nav > li > a:hover {
+  color: var(--selected-color) !important;
 }
